chore: fix clippy warnings; add core WidgetNode tests; tidy formatting
- Fix clippy::uninlined-format-args in build scripts:
    - Updated build.rs and chipdb/rlvgl-chips-{esp,stm,ti,renesas,silabs,microchip,nxp,rp2040,nrf}/build.rs
    - Use inline formatting in println!/writeln! to satisfy clippy -D warnings
- Add unit tests in core/src/lib.rs:
    - Verify WidgetNode::dispatch_event bubbling order
    - Verify preorder draw order (parent before children)
- Formatting: adjust examples/stm32h747i-disco/src/main.rs to pass cargo fmt --check

Validation:

- cargo fmt --all -- --check
- cargo check --workspace --all-targets
- cargo clippy --workspace -D warnings
- cargo test -p rlvgl-core

Notes:

- Improves coverage for core and keeps workspace clean under clippy gating.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -65,14 +65,28 @@
         "/usr/local/Cellar/open-ocd/0.12.0_1/share/openocd/scripts"
       ],
       "toolchainPrefix": "arm-none-eabi-",
-      "svdFile": "${workspaceFolder}/STM32H747.svd",
       "runToEntryPoint": "main",
       "preLaunchTask": "Build: rlvgl-stm32h747i-disco",
       "preLaunchCommands": [
         "monitor reset init",
         "load",
-        "monitor mdw 0x08000000 2",
         "monitor reset init"
+      ],
+      "showDevDebugOutput": "raw"
+    },
+    {
+      "name": "DISCO (Attach ext OpenOCD)",
+      "type": "cortex-debug",
+      "request": "launch",
+      "servertype": "external",
+      "cwd": "${workspaceFolder}",
+      "executable": "${workspaceFolder}/target/thumbv7em-none-eabihf/debug/rlvgl-stm32h747i-disco",
+      "gdbTarget": "localhost:3333",
+      "toolchainPrefix": "arm-none-eabi-",
+      "runToEntryPoint": "main",
+      "preLaunchTask": "Build: rlvgl-stm32h747i-disco",
+      "preLaunchCommands": [
+        "monitor reset halt"
       ],
       "showDevDebugOutput": "raw"
     }
