--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Prepare build environment
         run: bash scripts/setup-ci-env.sh
+      - name: Install rust-lld
+        run: rustup component add rust-lld
       - run: cargo build --workspace --verbose
       - run: cargo fmt --all -- --check
       - run: cargo clippy --workspace -- -D warnings
@@ -31,10 +33,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Prepare build environment
         run: bash scripts/setup-ci-env.sh
+      - name: Install rust-lld
+        run: rustup component add rust-lld
       - name: Install target
         run: rustup target add thumbv7em-none-eabihf
       - name: Build firmware
-        run: RUSTFLAGS="" cargo build --bin rlvgl-stm32h747i-disco --features "stm32h747i_disco,qrcode,png,jpeg,fontdue" --target thumbv7em-none-eabihf --release
+        run: cargo build --bin rlvgl-stm32h747i-disco --features "stm32h747i_disco,qrcode,png,jpeg,fontdue" --target thumbv7em-none-eabihf --release
       - name: Firmware size
         run: arm-none-eabi-size target/thumbv7em-none-eabihf/release/rlvgl-stm32h747i-disco | tee size.txt
       - name: Upload firmware
@@ -87,3 +91,4 @@ jobs:
         with:
           name: boards-json
           path: chipdb/rlvgl-chips-stm/db/boards.json
+
