DISCO: no_std FATFS adapter + optional SD assets demo; docs + CI updates
- Add platform::sd_fatfs_adapter (core_io-based) and export under feature fatfs_nostd
- Gate DISCO example SDMMC mount + /assets listing with fatfs_nostd, sd_assets_demo
- Add on-screen indicators for success/empty/failure
- Update hardware notes, bring-up TODOs, troubleshooting, cross-testing
- Note linker script + touch I2C done; add backlight ramp
- Add allow-failure CI job to try fatfs_nostd build
- Update changelog

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,24 @@ jobs:
             target/thumbv7em-none-eabihf/release/rlvgl-stm32h747i-disco
             size.txt
 
+  stm32h747i-disco-fatfs:
+    continue-on-error: true
+    runs-on: ubuntu-latest
+    container:
+      image: docker.io/iraa/rlvgl:latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Prepare build environment
+        run: bash scripts/setup-ci-env.sh
+      - name: Install target
+        run: rustup target add thumbv7em-none-eabihf
+      - name: Build firmware (fatfs no_std demo)
+        run: |
+          RUSTFLAGS="" cargo build \
+            --bin rlvgl-stm32h747i-disco \
+            --features "stm32h747i_disco,fatfs_nostd,sd_assets_demo" \
+            --target thumbv7em-none-eabihf --release || true
+
   polish:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
